--- a/02/02_end_to_end_machine_learning_project.ipynb
+++ b/02/02_end_to_end_machine_learning_project.ipynb
@@ -3874,7 +3874,25 @@
     "특성을 조합, 정제할 때 사용\n",
     "\n",
     "\n",
-    "[참고자료](https://databuzz-team.github.io/2018/11/11/make_pipeline/)"
+    "[참고자료](https://databuzz-team.github.io/2018/11/11/make_pipeline/)\n",
+    "\n",
+    "\n",
+    "[class란?](https://wikidocs.net/16071)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### [TransformerMixin](https://github.com/scikit-learn/scikit-learn/blob/bac89c253b35a8f1a3827389fbee0f5bebcbc985/sklearn/base.py#L435)\n",
+    "* fit_transform()이 구현되어 있음\n",
+    "* 상속함으로써 자동으로 생성\n",
+    "\n",
+    "\n",
+    "#### [BaseEstim](https://github.com/scikit-learn/scikit-learn/blob/bac89c253b35a8f1a3827389fbee0f5bebcbc985/sklearn/base.py#L129)\n",
+    "* 하이퍼파라미터 튜닝에 필요한 두 메서드 get_params()와 set_params()가 구현되어 있음\n",
+    "* 상속함으로써 자동으로 생성\n",
+    "* 이때 생성자에 *arg, **kargs를 사용하지 않아야 한다."
    ]
   },
   {
@@ -3895,19 +3913,28 @@
     "# 열 인덱스\n",
     "rooms_ix, bedrooms_ix, population_ix, households_ix = 3, 4, 5, 6\n",
     "\n",
+    "#하이퍼파라미터로 add_bed_per_room을 가진다.\n",
     "class CombinedAttributesAdder(BaseEstimator, TransformerMixin):\n",
+    "    # 이 클래스에서 받을 파라미터를 정의\n",
     "    def __init__(self, add_bedrooms_per_room=True): # *args 또는 **kargs 없음\n",
     "        self.add_bedrooms_per_room = add_bedrooms_per_room\n",
     "\n",
+    "    #특성을 추가하고 변형하는 것이기 때문에 딱히 훈련하지 않음\n",
     "    def fit(self, X, y=None):\n",
-    "        return self  # 아무것도 하지 않습니다\n",
+    "        return self  # 아무것도 하지 않습니다(빈 메소드)\n",
     "    \n",
+    "    #\n",
     "    def transform(self, X):\n",
+    "        # romms / household\n",
     "        rooms_per_household = X[:, rooms_ix] / X[:, households_ix]\n",
+    "        # population / household\n",
     "        population_per_household = X[:, population_ix] / X[:, households_ix]\n",
     "        \n",
+    "        #매개 변수에 따라서 add_bebrooms_per_romm(True/False)계산할지 안할지 결정\n",
     "        if self.add_bedrooms_per_room:\n",
     "            bedrooms_per_room = X[:, bedrooms_ix] / X[:, rooms_ix]\n",
+    "\n",
+    "            #원본 데이터 X(input data)와 계산한 rooms_per_household,  population_per_household, bedrooms_per_room을 추가한다(columns)\n",
     "            return np.c_[X, rooms_per_household, population_per_household,\n",
     "                         bedrooms_per_room]\n",
     "        \n",
@@ -4100,6 +4127,7 @@
     }
    ],
    "source": [
+    "#위에서 add_bedrooms_per_room=False로 지정했기 때문에 add_bedrooms_per_room column이 없다\n",
     "housing_extra_attribs = pd.DataFrame(\n",
     "    housing_extra_attribs,\n",
     "    columns=list(housing.columns)+[\"rooms_per_household\", \"population_per_household\"],\n",
@@ -4113,7 +4141,26 @@
    "source": [
     "## 변환 파이프라인\n",
     "\n",
-    "수치형 특성을 전처리하기 위해 파이프라인을 만듭니다:"
+    "수치형 특성을 전처리하기 위해 파이프라인을 만듭니다.\n",
+    "\n",
+    "\n",
+    "파이프라인은 연속된 변환을 순서대로 처리할 수 있도록 돕습니다.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 특성 스케일링(정규화를 해주는 이유)\n",
+    "* 데이터셋의 feature가 엄청 큰 경우에는 큰 스케일을 가진 feature가 영향이 커서 예측이 정확하지 않기 때문임."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 정규화(Normalize) \n",
+    "머신러닝에 사용되는 data는 값이 너무 크거나 작지 않고 적당한 범위(-1에서 ~ 1사이)에 있어야 model의 accuracy가 높아짐. 물론 무조건 이러한 규칙을 따르는 것은 아님(decision tree 같은 알고리즘에서는 효과 없음). 그래서 학습 전에 미리 값이 적당한 범위를 유지하도록 model에 input할 data를 변환해주는데. 이러한 작업을 __정규화(Normalize)__ 라고 한다."
    ]
   },
   {
@@ -4132,6 +4179,7 @@
     "from sklearn.pipeline import Pipeline\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "\n",
+    "#stdandardScaler()를 통해 정규화 진행\n",
     "num_pipeline = Pipeline([\n",
     "        ('imputer', SimpleImputer(strategy=\"median\")),\n",
     "        ('attribs_adder', CombinedAttributesAdder()),\n",
@@ -4198,6 +4246,7 @@
     "num_attribs = list(housing_num)\n",
     "cat_attribs = [\"ocean_proximity\"]\n",
     "\n",
+    "#OneHotEncoder()를 통해 ocean_proximity 전처리\n",
     "full_pipeline = ColumnTransformer([\n",
     "        (\"num\", num_pipeline, num_attribs),\n",
     "        (\"cat\", OneHotEncoder(), cat_attribs),\n",
@@ -4473,6 +4522,7 @@
     }
    ],
    "source": [
+    "#선형 회귀 모델\n",
     "from sklearn.linear_model import LinearRegression\n",
     "\n",
     "lin_reg = LinearRegression()\n",
@@ -4610,6 +4660,7 @@
     }
    ],
    "source": [
+    "#오차가 크다(과소적합의 사례) ~ 복잡한 모델을 사용하여 해결(이 외에도 특성 추가, 규제 감소 등이 존재)\n",
     "from sklearn.metrics import mean_squared_error\n",
     "\n",
     "housing_predictions = lin_reg.predict(housing_prepared)\n",
@@ -4679,6 +4730,7 @@
     }
    ],
    "source": [
+    "#더 복잡한 모델인 DecisionTreeRegressor사용\n",
     "from sklearn.tree import DecisionTreeRegressor\n",
     "\n",
     "tree_reg = DecisionTreeRegressor(random_state=42)\n",
@@ -4709,6 +4761,7 @@
     }
    ],
    "source": [
+    "#오차가 없다? => overfiting이 발생!!\n",
     "housing_predictions = tree_reg.predict(housing_prepared)\n",
     "tree_mse = mean_squared_error(housing_labels, housing_predictions)\n",
     "tree_rmse = np.sqrt(tree_mse)\n",
@@ -4720,6 +4773,16 @@
    "metadata": {},
    "source": [
     "## 교차 검증을 사용한 평가"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### K-겹 교차 검증(K-fold cross validation)이란?\n",
+    "k겹 교차 검증이란 데이터셋을 여러 개로 나누어 하나씩 테스트셋으로 사용하고 나머지를 모두 합해서 학습셋으로 사용하는 방법\n",
+    "\n",
+    "[참고자료](https://thebook.io/080228/part04/ch13/05/)"
    ]
   },
   {
@@ -4767,6 +4830,7 @@
     }
    ],
    "source": [
+    "#선형회귀 보다는 결과가 좋지 않다..(overfiting 때문인듯)\n",
     "def display_scores(scores):\n",
     "    print(\"점수:\", scores)\n",
     "    print(\"평균:\", scores.mean())\n",
@@ -4837,6 +4901,7 @@
     }
    ],
    "source": [
+    "#RandomForestRegressor 모델\n",
     "from sklearn.ensemble import RandomForestRegressor\n",
     "\n",
     "forest_reg = RandomForestRegressor(n_estimators=100, random_state=42)\n",
@@ -4898,6 +4963,7 @@
     }
    ],
    "source": [
+    "# 선형회귀, 결정트리보다 좋은 결과!\n",
     "from sklearn.model_selection import cross_val_score\n",
     "\n",
     "forest_scores = cross_val_score(forest_reg, housing_prepared, housing_labels,\n",
@@ -4966,6 +5032,8 @@
     }
    ],
    "source": [
+    "#SVM(서포트 벡터 머신) 모델 사용\n",
+    "#결과는 좋지 않다\n",
     "from sklearn.svm import SVR\n",
     "\n",
     "svm_reg = SVR(kernel=\"linear\")\n",
@@ -4988,6 +5056,20 @@
    "metadata": {},
    "source": [
     "## 그리드 탐색"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### [sklearn.model_selection.GridSearchCV(estimator, param_grid, scoring, cv,refit)](https://scikit-learn.org/stable/modules/generated/sklearn.model_selection.GridSearchCV.html)\n",
+    "- estimator : classifier, regressor, pipeline 등 가능\n",
+    "- param_grid : 튜닝을 위해 파라미터, 사용될 파라미터를 dictionary 형태로 만들어서 넣는다.\n",
+    "- scoring : 예측 성능을 측정할 평가 방법을 넣는다. 보통 accuracy 로 지정하여서 정확도로 성능 평가를 한다.\n",
+    "- cv : 교차 검증에서 몇개로 분할되는지 지정한다.\n",
+    "- refit : True가 디폴트로 True로 하면 최적의 하이퍼 파라미터를 찾아서 재학습 시킨다.\n",
+    "\n",
+    "[RandomForestRegressor의 파라미터](https://scikit-learn.org/stable/modules/generated/sklearn.ensemble.RandomForestRegressor.html)"
    ]
   },
   {
@@ -5028,6 +5110,7 @@
     "    {'bootstrap': [False], 'n_estimators': [3, 10], 'max_features': [2, 3, 4]},\n",
     "  ]\n",
     "\n",
+    "#RandomForestRegressor의 최적의 파라미터\n",
     "forest_reg = RandomForestRegressor(random_state=42)\n",
     "# 다섯 개의 폴드로 훈련하면 총 (12+6)*5=90번의 훈련이 일어납니다.\n",
     "grid_search = GridSearchCV(forest_reg, param_grid, cv=5,\n",
@@ -5778,7 +5861,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 랜덤 탐색"
+    "## 랜덤 탐색\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### [sklearn.model_selection.RandomizedSearchCV](https://scikit-learn.org/stable/modules/generated/sklearn.model_selection.RandomizedSearchCV.html)\n",
+    "파라미터의 탐색 공간이 커지면 수동으로 선택하는 방식보다 좋다.\n",
+    "* n_iter : 파라미터 검색 횟수\n"
    ]
   },
   {
@@ -5935,6 +6027,7 @@
     }
    ],
    "source": [
+    "# 특성의 중요도 확인\n",
     "extra_attribs = [\"rooms_per_hhold\", \"pop_per_hhold\", \"bedrooms_per_room\"]\n",
     "#cat_encoder = cat_pipeline.named_steps[\"cat_encoder\"] # 예전 방식\n",
     "cat_encoder = full_pipeline.named_transformers_[\"cat\"]\n",
